show how many NaN values

--- a/notebook_airbnb.ipynb
+++ b/notebook_airbnb.ipynb
@@ -805,17 +805,58 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "986ea89a-66fe-4bd6-8dda-2c0290aafc10",
+   "cell_type": "markdown",
+   "id": "e61e37d3-87b6-4b68-92bc-1e533b5ea9f9",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### show how many NaN values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "88289b2f-7bf5-4f99-b88a-db577d5ade5e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "id                                    0\n",
+       "listing_url                           0\n",
+       "name                                 37\n",
+       "description                         565\n",
+       "neighborhood_overview             24279\n",
+       "host_id                               0\n",
+       "host_url                              0\n",
+       "host_name                            18\n",
+       "neighbourhood_cleansed                0\n",
+       "latitude                              0\n",
+       "longitude                             0\n",
+       "room_type                             0\n",
+       "price                                 0\n",
+       "minimum_nights                        0\n",
+       "minimum_nights                        0\n",
+       "availability_365                      0\n",
+       "number_of_reviews                     0\n",
+       "last_review                       11095\n",
+       "calculated_host_listings_count        0\n",
+       "reviews_per_month                 11095\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1.isna().sum()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88289b2f-7bf5-4f99-b88a-db577d5ade5e",
+   "id": "dfa26cc8-6a9a-4c9a-851a-423d03c672f5",
    "metadata": {},
    "outputs": [],
    "source": []
