last_review transform to datetime

--- a/notebook_airbnb.ipynb
+++ b/notebook_airbnb.ipynb
@@ -814,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "88289b2f-7bf5-4f99-b88a-db577d5ade5e",
    "metadata": {},
    "outputs": [
@@ -844,7 +844,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -854,9 +854,88 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "39294c37-7737-472a-b3eb-ee407e58dcc7",
+   "metadata": {},
+   "source": [
+    "# last_review Data transformation into datetime"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "e1a7e96d-01b4-4b03-a231-96ecb5a5902f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        2023-02-18\n",
+       "1        2023-03-15\n",
+       "2        2015-09-14\n",
+       "3               NaN\n",
+       "4        2022-10-21\n",
+       "            ...    \n",
+       "56721           NaN\n",
+       "56722           NaN\n",
+       "56723           NaN\n",
+       "56724           NaN\n",
+       "56725           NaN\n",
+       "Name: last_review, Length: 56726, dtype: object"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1['last_review']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "17400857-08e9-46af-8924-d397e73c60ac",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       2023-02-18\n",
+       "1       2023-03-15\n",
+       "2       2015-09-14\n",
+       "3              NaT\n",
+       "4       2022-10-21\n",
+       "           ...    \n",
+       "56721          NaT\n",
+       "56722          NaT\n",
+       "56723          NaT\n",
+       "56724          NaT\n",
+       "56725          NaT\n",
+       "Name: last_review, Length: 56726, dtype: datetime64[ns]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1['last_review'] = pd.to_datetime(df1['last_review'])\n",
+    "df1['last_review']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f3022969-4a8c-4b7d-82ce-235e1219dc74",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dfa26cc8-6a9a-4c9a-851a-423d03c672f5",
+   "id": "51912e77-a0c3-4a38-89af-dc4cbbb928ed",
    "metadata": {},
    "outputs": [],
    "source": []
