last_review replace NaN value

--- a/notebook_airbnb.ipynb
+++ b/notebook_airbnb.ipynb
@@ -930,12 +930,47 @@
    "cell_type": "markdown",
    "id": "f3022969-4a8c-4b7d-82ce-235e1219dc74",
    "metadata": {},
-   "source": []
+   "source": [
+    "# replace NaN value by max value in last_review"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "51912e77-a0c3-4a38-89af-dc4cbbb928ed",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       2023-02-18\n",
+       "1       2023-03-15\n",
+       "2       2015-09-14\n",
+       "3       2023-03-26\n",
+       "4       2022-10-21\n",
+       "           ...    \n",
+       "56721   2023-03-26\n",
+       "56722   2023-03-26\n",
+       "56723   2023-03-26\n",
+       "56724   2023-03-26\n",
+       "56725   2023-03-26\n",
+       "Name: last_review, Length: 56726, dtype: datetime64[ns]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1['last_review'] = df1['last_review'].fillna(df1['last_review'].max())\n",
+    "df1['last_review']"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51912e77-a0c3-4a38-89af-dc4cbbb928ed",
+   "id": "0aebae3a-27a0-412e-bd8b-26273e52404d",
    "metadata": {},
    "outputs": [],
    "source": []
