NaN value in review_per_month replace by 0

--- a/notebook_airbnb.ipynb
+++ b/notebook_airbnb.ipynb
@@ -968,9 +968,50 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "190a8145-b3a1-4478-8307-deb461fd1aa3",
+   "metadata": {},
+   "source": [
+    "# Replace NaN in reviews_per_month by 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "8c94623d-24aa-4e8e-ab96-43b1d9feb857",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        1.99\n",
+       "1        2.26\n",
+       "2        0.04\n",
+       "3        0.00\n",
+       "4        0.35\n",
+       "         ... \n",
+       "56721    0.00\n",
+       "56722    0.00\n",
+       "56723    0.00\n",
+       "56724    0.00\n",
+       "56725    0.00\n",
+       "Name: reviews_per_month, Length: 56726, dtype: float64"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1['reviews_per_month'] = df1['reviews_per_month'].fillna(0)\n",
+    "df1['reviews_per_month']"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0aebae3a-27a0-412e-bd8b-26273e52404d",
+   "id": "25fe0b26-4eb2-4730-bc86-9b89eec7d851",
    "metadata": {},
    "outputs": [],
    "source": []
