treat NaN value in name, host_name_description, neighbourhood_overview and neighbourhood

--- a/notebook_airbnb.ipynb
+++ b/notebook_airbnb.ipynb
@@ -1009,9 +1009,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a8cc58dc-722a-4be3-bd99-70456a44dce7",
+   "metadata": {},
+   "source": [
+    "# replace NaN value in name, host_name, description, neighbourhood_overview and neighbourhood with \"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "bc8f6c46-5a7a-45d4-8311-115f13fc2e15",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arraytofil = ['name', 'host_name', 'description', 'neighborhood_overview', 'neighbourhood_cleansed']\n",
+    "df1[arraytofil] = df1[arraytofil].fillna(\"\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25fe0b26-4eb2-4730-bc86-9b89eec7d851",
+   "id": "c0fd67c3-4d35-4471-abc5-902437410550",
    "metadata": {},
    "outputs": [],
    "source": []
