Check if NaN as been replaced

--- a/notebook_airbnb.ipynb
+++ b/notebook_airbnb.ipynb
@@ -1033,7 +1033,9 @@
    "id": "c0fd67c3-4d35-4471-abc5-902437410550",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    " Verifier s'il y en a enore de valeurs nulles"
+   ]
   }
  ],
  "metadata": {
