$ removed from price

--- a/notebook_airbnb.ipynb
+++ b/notebook_airbnb.ipynb
@@ -1028,14 +1028,69 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b9fc64cc-a000-4417-9761-6de37444d169",
+   "metadata": {},
+   "source": [
+    " ### Check if all NaN as been replaced"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "7ee2de7e-3224-4af3-918a-395e6384953e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "id                                0\n",
+       "listing_url                       0\n",
+       "name                              0\n",
+       "description                       0\n",
+       "neighborhood_overview             0\n",
+       "host_id                           0\n",
+       "host_url                          0\n",
+       "host_name                         0\n",
+       "neighbourhood_cleansed            0\n",
+       "latitude                          0\n",
+       "longitude                         0\n",
+       "room_type                         0\n",
+       "price                             0\n",
+       "minimum_nights                    0\n",
+       "minimum_nights                    0\n",
+       "availability_365                  0\n",
+       "number_of_reviews                 0\n",
+       "last_review                       0\n",
+       "calculated_host_listings_count    0\n",
+       "reviews_per_month                 0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c02d7777-284d-459d-9b94-b0d552ecaac8",
+   "metadata": {},
+   "source": [
+    "# Cleaning col Price for remove '$' "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c0fd67c3-4d35-4471-abc5-902437410550",
+   "id": "a1d2e75e-b329-41b2-8397-4fd8b05e969a",
    "metadata": {},
    "outputs": [],
-   "source": [
-    " Verifier s'il y en a enore de valeurs nulles"
-   ]
+   "source": []
   }
  ],
  "metadata": {
