add reserved_365 col

--- a/notebook_airbnb.ipynb
+++ b/notebook_airbnb.ipynb
@@ -1086,11 +1086,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "a1d2e75e-b329-41b2-8397-4fd8b05e969a",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        124.00\n",
+       "1        130.00\n",
+       "2        140.00\n",
+       "3         75.00\n",
+       "4        160.00\n",
+       "          ...  \n",
+       "56721    640.00\n",
+       "56722    538.00\n",
+       "56723    600.00\n",
+       "56724    181.00\n",
+       "56725    300.00\n",
+       "Name: price, Length: 56726, dtype: object"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1['price'] = df1['price'].str.replace('$', \"\")\n",
+    "df1['price']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ade307d6-3ac4-4169-8b45-653fa9fd5578",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Add une colonne contenant le nombre de nuits reservees durant les 365 jours de l'an"
+   ]
   }
  ],
  "metadata": {
