add reserved_365 col

--- a/notebook_airbnb.ipynb
+++ b/notebook_airbnb.ipynb
@@ -1118,14 +1118,145 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f1c5827b-2ef0-4130-8967-0ae70d8350f7",
+   "metadata": {},
+   "source": [
+    "# Add new col for getting night reserved on year in reserved_365"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "c8ab5228-7a41-41eb-a1f1-fea8f5d55fc9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>listing_url</th>\n",
+       "      <th>name</th>\n",
+       "      <th>description</th>\n",
+       "      <th>neighborhood_overview</th>\n",
+       "      <th>host_id</th>\n",
+       "      <th>host_url</th>\n",
+       "      <th>host_name</th>\n",
+       "      <th>neighbourhood_cleansed</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>...</th>\n",
+       "      <th>room_type</th>\n",
+       "      <th>price</th>\n",
+       "      <th>minimum_nights</th>\n",
+       "      <th>minimum_nights</th>\n",
+       "      <th>availability_365</th>\n",
+       "      <th>number_of_reviews</th>\n",
+       "      <th>last_review</th>\n",
+       "      <th>calculated_host_listings_count</th>\n",
+       "      <th>reviews_per_month</th>\n",
+       "      <th>reserved_365</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>5396</td>\n",
+       "      <td>https://www.airbnb.com/rooms/5396</td>\n",
+       "      <td>Explore the heart of old Paris</td>\n",
+       "      <td>Cozy, well-appointed and graciously designed s...</td>\n",
+       "      <td>You are within walking distance to the Louvre,...</td>\n",
+       "      <td>7903</td>\n",
+       "      <td>https://www.airbnb.com/users/show/7903</td>\n",
+       "      <td>Borzou</td>\n",
+       "      <td>Hôtel-de-Ville</td>\n",
+       "      <td>48.85247</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Entire home/apt</td>\n",
+       "      <td>124.00</td>\n",
+       "      <td>15</td>\n",
+       "      <td>15</td>\n",
+       "      <td>184</td>\n",
+       "      <td>332</td>\n",
+       "      <td>2023-02-18</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.99</td>\n",
+       "      <td>181</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1 rows × 21 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     id                        listing_url                            name  \\\n",
+       "0  5396  https://www.airbnb.com/rooms/5396  Explore the heart of old Paris   \n",
+       "\n",
+       "                                         description  \\\n",
+       "0  Cozy, well-appointed and graciously designed s...   \n",
+       "\n",
+       "                               neighborhood_overview  host_id  \\\n",
+       "0  You are within walking distance to the Louvre,...     7903   \n",
+       "\n",
+       "                                 host_url host_name neighbourhood_cleansed  \\\n",
+       "0  https://www.airbnb.com/users/show/7903    Borzou         Hôtel-de-Ville   \n",
+       "\n",
+       "   latitude  ...        room_type   price  minimum_nights  minimum_nights  \\\n",
+       "0  48.85247  ...  Entire home/apt  124.00              15              15   \n",
+       "\n",
+       "   availability_365  number_of_reviews  last_review  \\\n",
+       "0               184                332   2023-02-18   \n",
+       "\n",
+       "  calculated_host_listings_count  reviews_per_month  reserved_365  \n",
+       "0                              1               1.99           181  \n",
+       "\n",
+       "[1 rows x 21 columns]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1['reserved_365'] = (365 - df1['availability_365'])\n",
+    "df1.head(1)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ade307d6-3ac4-4169-8b45-653fa9fd5578",
+   "id": "ddd07acc-4fb0-4f4d-a906-6cbd539c1f34",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Add une colonne contenant le nombre de nuits reservees durant les 365 jours de l'an"
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7b24937b-0ea3-4b65-b91d-5ed64e6d1821",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
