--- a/notebook_airbnb.ipynb
+++ b/notebook_airbnb.ipynb
@@ -13,7 +13,7 @@
    "id": "653e7b9b-9b0b-4f0c-836e-459fbd787359",
    "metadata": {},
    "source": [
-    "### Data Inspection"
+    "# Data Inspection"
    ]
   },
   {
@@ -814,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "88289b2f-7bf5-4f99-b88a-db577d5ade5e",
    "metadata": {},
    "outputs": [
@@ -844,7 +844,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -858,12 +858,12 @@
    "id": "39294c37-7737-472a-b3eb-ee407e58dcc7",
    "metadata": {},
    "source": [
-    "# last_review Data transformation into datetime"
+    "### last_review Data transformation into datetime"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "id": "e1a7e96d-01b4-4b03-a231-96ecb5a5902f",
    "metadata": {},
    "outputs": [
@@ -884,7 +884,7 @@
        "Name: last_review, Length: 56726, dtype: object"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -895,7 +895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "id": "17400857-08e9-46af-8924-d397e73c60ac",
    "metadata": {},
    "outputs": [
@@ -916,7 +916,7 @@
        "Name: last_review, Length: 56726, dtype: datetime64[ns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -931,12 +931,12 @@
    "id": "f3022969-4a8c-4b7d-82ce-235e1219dc74",
    "metadata": {},
    "source": [
-    "# replace NaN value by max value in last_review"
+    "### replace NaN value by max value in last_review"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "id": "51912e77-a0c3-4a38-89af-dc4cbbb928ed",
    "metadata": {},
    "outputs": [
@@ -957,7 +957,7 @@
        "Name: last_review, Length: 56726, dtype: datetime64[ns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -972,12 +972,12 @@
    "id": "190a8145-b3a1-4478-8307-deb461fd1aa3",
    "metadata": {},
    "source": [
-    "# Replace NaN in reviews_per_month by 0"
+    "### Replace NaN in reviews_per_month by 0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "id": "8c94623d-24aa-4e8e-ab96-43b1d9feb857",
    "metadata": {},
    "outputs": [
@@ -998,7 +998,7 @@
        "Name: reviews_per_month, Length: 56726, dtype: float64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1013,12 +1013,12 @@
    "id": "a8cc58dc-722a-4be3-bd99-70456a44dce7",
    "metadata": {},
    "source": [
-    "# replace NaN value in name, host_name, description, neighbourhood_overview and neighbourhood with \"\""
+    "### replace NaN value in name, host_name, description, neighbourhood_overview and neighbourhood with \"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "id": "bc8f6c46-5a7a-45d4-8311-115f13fc2e15",
    "metadata": {},
    "outputs": [],
@@ -1037,7 +1037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "id": "7ee2de7e-3224-4af3-918a-395e6384953e",
    "metadata": {},
    "outputs": [
@@ -1067,7 +1067,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1081,12 +1081,12 @@
    "id": "c02d7777-284d-459d-9b94-b0d552ecaac8",
    "metadata": {},
    "source": [
-    "# Cleaning col Price for remove '$' "
+    "### Cleaning col Price for remove '$' "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "id": "a1d2e75e-b329-41b2-8397-4fd8b05e969a",
    "metadata": {},
    "outputs": [
@@ -1107,7 +1107,7 @@
        "Name: price, Length: 56726, dtype: object"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1122,12 +1122,12 @@
    "id": "f1c5827b-2ef0-4130-8967-0ae70d8350f7",
    "metadata": {},
    "source": [
-    "# Add new col for getting night reserved on year in reserved_365"
+    "### Add new col for getting night reserved on year in reserved_365"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "id": "c8ab5228-7a41-41eb-a1f1-fea8f5d55fc9",
    "metadata": {},
    "outputs": [
@@ -1230,7 +1230,7 @@
        "[1 rows x 21 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1241,13 +1241,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ddd07acc-4fb0-4f4d-a906-6cbd539c1f34",
+   "cell_type": "markdown",
+   "id": "d238118d-e4d9-4670-a623-4cb59ae1a5a7",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "\n"
+    "\n",
+    "# Analyze Data"
    ]
   },
   {
@@ -1256,7 +1255,9 @@
    "id": "7b24937b-0ea3-4b65-b91d-5ed64e6d1821",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "How many host does ww"
+   ]
   }
  ],
  "metadata": {
