top 10 host having most listing

--- a/notebook_airbnb.ipynb
+++ b/notebook_airbnb.ipynb
@@ -1250,14 +1250,90 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "89f92c35-ef7c-48b7-b799-7680e46f1834",
+   "metadata": {},
+   "source": [
+    "### How many host does we have ?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "962e6f92-c702-4032-b625-6ac8ab880927",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "42490"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1['host_id'].nunique()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "21090171-8eab-4c8a-b436-5f1547301756",
+   "metadata": {},
+   "source": [
+    "### Show top 10 of host having the most of listing "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "6e5413b8-7faa-48cb-b0c8-ad3b2537d449",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "host_id\n",
+       "314994947    447\n",
+       "50978178     230\n",
+       "50502817     214\n",
+       "7642792      196\n",
+       "440295601    195\n",
+       "33889201     182\n",
+       "458533553    165\n",
+       "26981054     156\n",
+       "402191311    141\n",
+       "6053288      131\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "top_hosts = df1['host_id'].value_counts().nlargest(10)\n",
+    "top_hosts"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b24937b-0ea3-4b65-b91d-5ed64e6d1821",
+   "id": "d9d41309-3cff-4dc7-aeeb-b6fb5bbd8d02",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "How many host does ww"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f034d6ff-e06e-4321-b8a6-b9788d13ef7c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
