Get neighborhood in Paris

--- a/notebook_airbnb.ipynb
+++ b/notebook_airbnb.ipynb
@@ -1320,6 +1320,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "46bcc04f-400e-4ff1-a09f-0763ab10b9bf",
+   "metadata": {},
+   "source": [
+    "### Show top 10 of host having the most of listing by name and ID"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 58,
    "id": "d9d41309-3cff-4dc7-aeeb-b6fb5bbd8d02",
@@ -1353,8 +1361,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8ff0c9b1-860c-4228-9714-b39d7ce83ea0",
+   "metadata": {},
+   "source": [
+    "### Show all listing of the top 10"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 61,
    "id": "f034d6ff-e06e-4321-b8a6-b9788d13ef7c",
    "metadata": {},
    "outputs": [],
@@ -1364,7 +1380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 62,
    "id": "1478fe55-52e7-4d22-b933-8aa80c536862",
    "metadata": {},
    "outputs": [
@@ -1803,7 +1819,7 @@
        "[2057 rows x 21 columns]"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1813,9 +1829,72 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ed39bbdd-5aa5-4822-b79a-7bfcdfa4ae89",
+   "metadata": {},
+   "source": [
+    "### Getting ID of top 1 who's having most listing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "b8a8521d-7107-49fa-99a5-a2df986d156d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "314994947"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "highestListing = df1['host_id'].value_counts().idxmax()\n",
+    "highestListing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9fa59a28-e0c8-42b8-9d87-e407f52bd37d",
+   "metadata": {},
+   "source": [
+    "### Getting neighborhood in Paris"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "799c45ca-a38a-4a25-aa2d-050180fd8112",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Hôtel-de-Ville', 'Opéra', 'Louvre', 'Popincourt',\n",
+       "       'Buttes-Montmartre', 'Luxembourg', 'Gobelins', 'Entrepôt',\n",
+       "       'Batignolles-Monceau', 'Temple', 'Buttes-Chaumont', 'Bourse',\n",
+       "       'Ménilmontant', 'Observatoire', 'Panthéon', 'Vaugirard', 'Élysée',\n",
+       "       'Reuilly', 'Passy', 'Palais-Bourbon'], dtype=object)"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1['neighbourhood_cleansed'].unique()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0a987135-601b-4199-b86d-f5a110fb5381",
+   "id": "c9f38274-1e86-432b-9603-506718b8f952",
    "metadata": {},
    "outputs": [],
    "source": []
