Get most listing in neighbourhood

--- a/notebook_airbnb.ipynb
+++ b/notebook_airbnb.ipynb
@@ -2828,35 +2828,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 46,
-   "id": "24232dcd-9e14-4654-b248-f038a8839208",
+   "cell_type": "markdown",
+   "id": "cf7d00cd-1d78-403d-9eb0-6ccd9f2fc780",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "host_id\n",
-       "33889201     90967904.0\n",
-       "342052277    34089835.0\n",
-       "10469459     22864130.0\n",
-       "314994947    13541778.0\n",
-       "50978178     11511322.0\n",
-       "                ...    \n",
-       "334363379           0.0\n",
-       "65716046            0.0\n",
-       "30932327            0.0\n",
-       "8830811             0.0\n",
-       "13003119            0.0\n",
-       "Name: annual_income, Length: 42490, dtype: float64"
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
+   "source": [
+    "### Getting the neighbourhood with the most of listing"
+   ]
   },
   {
    "cell_type": "code",
