Get most listing in neighbourhood

--- a/notebook_airbnb.ipynb
+++ b/notebook_airbnb.ipynb
@@ -2837,8 +2837,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "id": "3ecb1206-dd8d-4db7-ba0c-67733a7ed146",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "neighbourhood_cleansed\n",
+       "Buttes-Montmartre      6262\n",
+       "Popincourt             5149\n",
+       "Vaugirard              4258\n",
+       "Entrepôt               4019\n",
+       "Batignolles-Monceau    3625\n",
+       "Buttes-Chaumont        3139\n",
+       "Ménilmontant           3139\n",
+       "Passy                  3028\n",
+       "Opéra                  2884\n",
+       "Temple                 2633\n",
+       "Name: id, dtype: int64"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1.groupby('neighbourhood_cleansed')['id'].count().nlargest(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0564a4e3-6d4e-4376-b110-304297353015",
    "metadata": {},
    "outputs": [],
    "source": []
